<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".InstructionActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Read me"
        android:id="@+id/btn"
        ></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_content"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp" />
    <TextView
        android:id="@+id/tvEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english_content"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp" />
</LinearLayout>
